--- a/TreasureExpress/pages/te_mainpage.html
+++ b/TreasureExpress/pages/te_mainpage.html
@@ -23,5 +23,6 @@
             <li><a href="te_scanqr.html">Scan QR code</a></li>
         </ul>
     </nav>
+	<p>TEST TEXT <br> HELLO WORLD</p>
 </body>
 </html>
