--- a/TreasureExpress/pages/te_booking.html
+++ b/TreasureExpress/pages/te_booking.html
@@ -23,5 +23,6 @@
             <li><a href="te_scanqr.html">Scan QR code</a></li>
         </ul>
     </nav>
+    <p>Hello car;os </p>
 </body>
 </html>
