--- a/TreasureExpress/pages/te_favourited.html
+++ b/TreasureExpress/pages/te_favourited.html
@@ -23,5 +23,6 @@
             <li><a href="te_scanqr.html">Scan QR code</a></li>
         </ul>
     </nav>
+    <p>Hello Abigail was here </p>
 </body>
 </html>
