update on stationmap

--- a/TreasureExpress/pages/te_stationmap.html
+++ b/TreasureExpress/pages/te_stationmap.html
@@ -24,5 +24,8 @@
             <li><a href="te_scanqr.html">Scan QR code</a></li>
         </ul>
     </nav>
+	<div>Dynamic Landmark page -<br>
+		on iphone this section will curtain over the screen on ipad this section will apear on the side 
+	</div>
 </body>
 </html>
