--- a/TreasureExpress/pages/te_page1.html
+++ b/TreasureExpress/pages/te_page1.html
@@ -1,31 +1,14 @@
-<!doctype html>
+<!DOCTYPE html> 
 <html>
 <head>
-<meta charset="utf-8">
-<title>Treasure Express - Main Page</title>
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<title>Page Title</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+	<script src="http://code.jquery.com/jquery-1.4.5.min.js"></script>
+	<script src="http://code.jquery.com/mobile/[version]/jquery.mobile-1.4.5.min.js"></script>
 </head>
 
 <body>
-    <h1>MAIN PAGE</h1>
-    <header>
-        <ul>
-            <li><a href="te_mainpage.html">LOGO</a></li>
-            <li><img alt="account icon" width="10px"></li>
-            <li><a href="te_points.html">POINTS</a></li>
-        </ul>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="te_stationmap.html">Station Map</a></li>
-            <li><a href="te_visited.html">Visited</a></li>
-            <li><a href="te_favourited.html">Favourited</a></li>
-            <li><a href="te_booking.html">Book Tickets</a></li>
-            <li><a href="te_scanqr.html">Scan QR code</a></li>
-        </ul>
-    </nav>
-	<p>TEST TEXT <br> HELLO WORLD</p>
+
 </body>
 </html>
