--- a/TreasureExpress/pages/te_page1.html
+++ b/TreasureExpress/pages/te_page1.html
@@ -9,6 +9,31 @@
 </head>
 
 <body>
+	<div data-role="page">
 
+	<div data-role="header" data-position="fixed">
+		<h1>Home Page</h1>
+	</div>
+
+	<div role="main" class="ui-content">
+		<p>Page content goes here.</p>
+	</div>
+
+	<div data-role="footer" data-position="fixed">
+		<div data-role="navbar">
+			<ul>
+				<li>Station Map</li>
+				<li>Favourited</li>
+				<li>Visited</li>
+				<li>Booking</li>
+				<li>Scan QR</li>
+			</ul>
+		
+		</div>
+	</div>
+</div>
+	
+	
+	
 </body>
 </html>
