--- a/TreasureExpress/pages/te_page1.html
+++ b/TreasureExpress/pages/te_page1.html
@@ -12,7 +12,7 @@
 	<div data-role="page">
 
 	<div data-role="header" data-position="fixed">
-		<h1>Home Page</h1>
+		<h1>Navigation Bar</h1>
 	</div>
 
 	<div role="main" class="ui-content">
