--- a/TreasureExpress/pages/te_page1.html
+++ b/TreasureExpress/pages/te_page1.html
@@ -9,30 +9,46 @@
 </head>
 
 <body>
-	<div data-role="page">
+<!---------------------------------------------------- Home Page ----------------------------------------------------->
+<div data-role="page" id="te_homepage">
 
-	<div data-role="header" data-position="fixed">
-		<h1>Navigation Bar</h1>
-	</div>
-
-	<div role="main" class="ui-content">
-		<p>Page content goes here.</p>
-	</div>
-
-	<div data-role="footer" data-position="fixed">
-		<div data-role="navbar">
-			<ul>
-				<li>Station Map</li>
-				<li>Favourited</li>
-				<li>Visited</li>
-				<li>Booking</li>
-				<li>Scan QR</li>
-			</ul>
-		</div>
-	</div>
 </div>
 	
+<!-------------------------------------------------------------------------------------------------------------------->	
+<!------------------------------------------------ Station Map Page -------------------------------------------------->
+<div data-role="page" id="te_stationmap">
 	
-	<p>Hello! :)</p>
+</div>
+	
+<!-------------------------------------------------------------------------------------------------------------------->	
+<!---------------------------------------------------- POI Page ------------------------------------------------------>
+<div data-role="page" id="te_poi">
+	
+</div>
+	
+<!-------------------------------------------------------------------------------------------------------------------->	
+<!------------------------------------------------- Favourites Page -------------------------------------------------->
+<div data-role="page" id="te_favourites">
+	
+</div>
+	
+<!-------------------------------------------------------------------------------------------------------------------->	
+<!---------------------------------------------- Booking Ticket Page ------------------------------------------------->
+<div data-role="page" id="te_booking">
+	
+</div>
+	
+<!-------------------------------------------------------------------------------------------------------------------->		
+<!------------------------------------------------- Scan QR code Page ------------------------------------------------>
+<div data-role="page" id="te_scanQR">
+	
+</div>
+	
+<!-------------------------------------------------------------------------------------------------------------------->	
+<!----------------------------------------------- Animated Diamond Page ---------------------------------------------->
+<div data-role="page" id="te_animDiamond">
+	
+</div>
+<!-------------------------------------------------------------------------------------------------------------------->	
 </body>
 </html>
