--- a/TreasureExpress/pages/te_page1.html
+++ b/TreasureExpress/pages/te_page1.html
@@ -18,11 +18,10 @@
 <!------------------------------------------------ Station Map Page -------------------------------------------------->
 <div data-role="page" id="te_stationmap">
 	
-</div>
+
+<!--------------------------------------------------- POI Section ---------------------------------------------------->
 	
-<!-------------------------------------------------------------------------------------------------------------------->	
-<!---------------------------------------------------- POI Page ------------------------------------------------------>
-<div data-role="page" id="te_poi">
+	
 	
 </div>
 	
