--- a/TreasureExpress/pages/te_page1.html
+++ b/TreasureExpress/pages/te_page1.html
@@ -12,42 +12,169 @@
 <body>
 <!---------------------------------------------------- Home Page ----------------------------------------------------->
 <div data-role="page" id="te_homepage">
-
+	
+	<div data-role="header">
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#" class="ui-btn ui-corner-all">PROFILE</a>
+			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
+		</div>
+	</div>
+	
+	<h1>HOME PAGE</h1>
+	
+	<div data-role="navbar">
+		<ul>
+			<li><a href="#te_stationmap">Station Map</a></li>
+			<li><a href="#te_favourites">Favourites</a></li>
+			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_scanQR">Scan QR</a></li>
+		</ul>
+	</div>
+	
+	
 </div>
 	
 <!-------------------------------------------------------------------------------------------------------------------->	
 <!------------------------------------------------ Station Map Page -------------------------------------------------->
 <div data-role="page" id="te_stationmap">
+	<div data-role="header">
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#" class="ui-btn ui-corner-all">PROFILE</a>
+			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
+		</div>
+	</div>
 	
-
-<!--------------------------------------------------- POI Section ---------------------------------------------------->
+	<h1>STATION MAP</h1>
 	
-	
+	<div data-role="navbar">
+		<ul>
+			<li><a href="#te_stationmap">Station Map</a></li>
+			<li><a href="#te_favourites">Favourites</a></li>
+			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_scanQR">Scan QR</a></li>
+		</ul>
+	</div>
 	
 </div>
 	
 <!-------------------------------------------------------------------------------------------------------------------->	
+<!--------------------------------------------------- POI Section ---------------------------------------------------->
+<div data-role="page" id="te_poi">
+	<div data-role="header">
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#" class="ui-btn ui-corner-all">PROFILE</a>
+			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
+		</div>
+	</div>
+	
+	<h1>POI PAGE </h1>
+	<p>Generate content using JSON</p>
+	
+	<div data-role="navbar">
+		<ul>
+			<li><a href="#te_stationmap">Station Map</a></li>
+			<li><a href="#te_favourites">Favourites</a></li>
+			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_scanQR">Scan QR</a></li>
+		</ul>
+	</div>
+	
+</div>	
+	
+<!-------------------------------------------------------------------------------------------------------------------->	
 <!------------------------------------------------- Favourites Page -------------------------------------------------->
 <div data-role="page" id="te_favourites">
+	<div data-role="header">
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#" class="ui-btn ui-corner-all">PROFILE</a>
+			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
+		</div>
+	</div>
+	
+	<h1>FAVOURITES </h1>
+	
+	<div data-role="navbar">
+		<ul>
+			<li><a href="#te_stationmap">Station Map</a></li>
+			<li><a href="#te_favourites">Favourites</a></li>
+			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_scanQR">Scan QR</a></li>
+		</ul>
+	</div>
 	
 </div>
 	
 <!-------------------------------------------------------------------------------------------------------------------->	
 <!---------------------------------------------- Booking Ticket Page ------------------------------------------------->
 <div data-role="page" id="te_booking">
+	<div data-role="header">
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#" class="ui-btn ui-corner-all">PROFILE</a>
+			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
+		</div>
+	</div>
 	
+	<h1>BOOK TICKETS</h1>
+	
+	<div data-role="navbar">
+		<ul>
+			<li><a href="#te_stationmap">Station Map</a></li>
+			<li><a href="#te_favourites">Favourites</a></li>
+			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_scanQR">Scan QR</a></li>
+		</ul>
+	</div>
 </div>
 	
 <!-------------------------------------------------------------------------------------------------------------------->		
 <!------------------------------------------------- Scan QR code Page ------------------------------------------------>
 <div data-role="page" id="te_scanQR">
+	<div data-role="header">
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#" class="ui-btn ui-corner-all">PROFILE</a>
+			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
+		</div>
+	</div>
 	
+	<h1>SCAN QR</h1>
+	
+	<div data-role="navbar">
+		<ul>
+			<li><a href="#te_stationmap">Station Map</a></li>
+			<li><a href="#te_favourites">Favourites</a></li>
+			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_scanQR">Scan QR</a></li>
+		</ul>
+	</div>
 </div>
 	
 <!-------------------------------------------------------------------------------------------------------------------->	
 <!----------------------------------------------- Animated Diamond Page ---------------------------------------------->
 <div data-role="page" id="te_animDiamond">
+	<div data-role="header">
+		<div data-role="controlgroup" data-type="horizontal">
+			<a href="#te_homepage" class="ui-btn ui-corner-all">LOGO</a>
+			<a href="#" class="ui-btn ui-corner-all">PROFILE</a>
+			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
+		</div>
+	</div>
 	
+	<h1>DIAMOND</h1>
+	
+	<div data-role="navbar">
+		<ul>
+			<li><a href="#te_stationmap">Station Map</a></li>
+			<li><a href="#te_favourites">Favourites</a></li>
+			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_scanQR">Scan QR</a></li>
+		</ul>
+	</div>
 </div>
 <!-------------------------------------------------------------------------------------------------------------------->
 
