--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -140,6 +140,8 @@
 		<label for="returnTime">Time: </label>
 		<input type="time" data-clear-btn="true" name="returnTime" id="returnTime" value="">
 
+		<!-----------------NEEDS ADD ADULT, CHILD, RAILCARD -->
+
 		<br>
 		<label for="enterPoints">Enter Points:</label>
 		<input type="text" id="enterPoints" name="enterPoints" value=""><br>
