--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -23,13 +23,32 @@
 	</div>
 	
 	<h1>HOME PAGE</h1>
+
+	<!-- Slideshow container -->
+<div class="slideshow-container" width="420" height="315" >
+
+</div><br>
+
+	<h2>Welcome to Treasure Express!</h2>
+
+	<p>Here with Treasure Express you can find what you enjoy in the cities you love as you travel!<br> 
+	With Treasure Express you can redeem vouchers to your favourite landmarks. <br><br><br>
+	The more landmarks you visit the more points you receive to your favourite vouchers!</p>
+	
+	<a href="#te_stationmap" data-role="button">OPEN MAP</a>
+
+	<iframe width="420" height="315"
+	src="https://www.youtube.com/watch?v=v0-Y6CUl3w4">
+	</iframe> 
+
+
 	
 	<div data-role="navbar">
 		<ul>
-			<li><a href="#te_stationmap">Station Map</a></li>
-			<li><a href="#te_favourites">Favourites</a></li>
-			<li><a href="#te_booking">Book Tickets</a></li>
-			<li><a href="#te_scanQR">Scan QR</a></li>
+			<li><a href="#te_stationmap">STATION MAP</a></li>
+			<li><a href="#te_favourites">FAVOURITES</a></li>
+			<li><a href="#te_booking">BOOK TICKETS</a></li>
+			<li><a href="#te_scanQR">SCAN QR</a></li>
 		</ul>
 	</div>
 	
@@ -62,10 +81,10 @@
 	
 	<div data-role="navbar">
 		<ul>
-			<li><a href="#te_stationmap">Station Map</a></li>
-			<li><a href="#te_favourites">Favourites</a></li>
-			<li><a href="#te_booking">Book Tickets</a></li>
-			<li><a href="#te_scanQR">Scan QR</a></li>
+			<li><a href="#te_stationmap">STATION MAP</a></li>
+			<li><a href="#te_favourites">FAVOURITES</a></li>
+			<li><a href="#te_booking">BOOK TICKETS</a></li>
+			<li><a href="#te_scanQR">SCAN QR</a></li>
 		</ul>
 	</div>
 
@@ -88,9 +107,9 @@
 	
 	<div data-role="navbar">
 		<ul>
-			<li><a href="#te_stationmap">Station Map</a></li>
-			<li><a href="#te_favourites">Favourites</a></li>
-			<li><a href="#te_booking">Book Tickets</a></li>
+			<li><a href="#te_stationmap">STATION MAP</a></li>
+			<li><a href="#te_favourites">FAVOURITES</a></li>
+			<li><a href="#te_booking">BOOK TICKETS</a></li>
 			<li><a href="#te_scanQR">Scan QR</a></li>
 		</ul>
 	</div>
@@ -153,10 +172,10 @@
 
 	<div data-role="navbar">
 		<ul>
-			<li><a href="#te_stationmap">Station Map</a></li>
-			<li><a href="#te_favourites">Favourites</a></li>
-			<li><a href="#te_booking">Book Tickets</a></li>
-			<li><a href="#te_scanQR">Scan QR</a></li>
+			<li><a href="#te_stationmap">STATION MAP</a></li>
+			<li><a href="#te_favourites">FAVOURITES</a></li>
+			<li><a href="#te_booking">BOOK TICKETS</a></li>
+			<li><a href="#te_scanQR">SCAN QR</a></li>
 		</ul>
 	</div>
 </div>
@@ -176,10 +195,10 @@
 	
 	<div data-role="navbar">
 		<ul>
-			<li><a href="#te_stationmap">Station Map</a></li>
-			<li><a href="#te_favourites">Favourites</a></li>
-			<li><a href="#te_booking">Book Tickets</a></li>
-			<li><a href="#te_scanQR">Scan QR</a></li>
+			<li><a href="#te_stationmap">STATION MAP</a></li>
+			<li><a href="#te_favourites">FAVOURITES</a></li>
+			<li><a href="#te_booking">BOOK TICKETS</a></li>
+			<li><a href="#te_scanQR">SCAN QR</a></li>
 		</ul>
 	</div>
 </div>
@@ -199,10 +218,10 @@
 	
 	<div data-role="navbar">
 		<ul>
-			<li><a href="#te_stationmap">Station Map</a></li>
-			<li><a href="#te_favourites">Favourites</a></li>
-			<li><a href="#te_booking">Book Tickets</a></li>
-			<li><a href="#te_scanQR">Scan QR</a></li>
+			<li><a href="#te_stationmap">STATION MAP</a></li>
+			<li><a href="#te_favourites">FAVOURITES</a></li>
+			<li><a href="#te_booking">BBOOK TICKETS</a></li>
+			<li><a href="#te_scanQR">SCAN QR</a></li>
 		</ul>
 	</div>
 </div>
