--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -37,10 +37,11 @@
 	
 	<a href="#te_stationmap" data-role="button">OPEN MAP</a>
 
-	<iframe width="420" height="315"
-	src="https://www.youtube.com/watch?v=v0-Y6CUl3w4">
-	</iframe> 
 
+	<iframe width="560" height="315" title="YouTube video player" frameborder="0" 
+		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+		src="https://www.youtube.com/embed/v0-Y6CUl3w4">
+	</iframe>
 
 	
 	<div data-role="navbar">
@@ -236,9 +237,9 @@ var data = {"poi":[
 				"station":"Waterloo",
 				"id":"waterloo_1",
 				"name":"London Dungeon",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"London_Dungeon.png",
+				"map_link":"https://goo.gl/maps/tDgZvkzYHbQk8d5P6",
+				"description":"The London Dungeon is a uniquely thrilling attraction that will whisk you way back to the capital's most perilous past. See, hear, feel and (ahem!) smell the chillingly amusing characters of the 'bad old days' as they come to life before you.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -255,9 +256,9 @@ var data = {"poi":[
 				"station":"Waterloo",
 				"id":"waterloo_2",
 				"name":"London Eye",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"London_Eye.png",
+				"map_link":"https://goo.gl/maps/RHcaEjLMMM3Q7T77A",
+				"description":"The London Eye is a cantilevered observation wheel on the South Bank of the River Thames in London. It is Europe's tallest cantilevered observation wheel, and is the most popular paid tourist attraction in the United Kingdom with over 3 million visitors annually.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -274,9 +275,9 @@ var data = {"poi":[
 				"station":"Waterloo",
 				"id":"waterloo_3",
 				"name":"Buckingham Palace",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Buckingham_Palace.png",
+				"map_link":"https://goo.gl/maps/2s4bMBiSmtwRCepH7",
+				"description":"Buckingham Palace is the London residence and administrative headquarters of the monarch of the United Kingdom. Located in the City of Westminster, the palace is often at the centre of state occasions and royal hospitality. It has been a focal point for the British people at times of national rejoicing and mourning. ",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -291,12 +292,12 @@ var data = {"poi":[
 	
 	/*WIMBELDON*/
 			{
-				"station":"Wimbeldon",
-				"id":"wimbeldon_1",
-				"name":"Wimbeldon Center Court",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"station":"Wimbledon",
+				"id":"wimbledon_1",
+				"name":"Wimbledon Centre Court",
+				"image":"Wimbledon_Centre_Court.png",
+				"map_link":"https://goo.gl/maps/CSvMngnsHmnZ9NwB7",
+				"description":"Centre Court is the main court at The Championships, Wimbledon, the third annual Grand Slam event of the tennis calendar. It is considered the world's most famous tennis court.It incorporates the clubhouse of the All England Lawn Tennis and Croquet Club. Its only regular use for play is during the two weeks a year that the Championships take place.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -310,12 +311,12 @@ var data = {"poi":[
 				
 			},
 			{
-				"station":"Wimbeldon",
-				"id":"wimbeldon_2",
-				"name":"New Wimbeldon Theatre",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"station":"Wimbledon",
+				"id":"wimbledon_2",
+				"name":"New Wimbledon Theatre",
+				"image":"New_Wimbledon_Theatre.png",
+				"map_link":"https://g.page/NewWimbTheatre?share",
+				"description":"A 108 year-old theatre in SW London presenting an eclectic mix of musicals, drama, comedy, dance and pantomime. An Ambassador Theatre Group venue.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -328,12 +329,12 @@ var data = {"poi":[
 				}
 			},
 			{
-				"station":"Wimbeldon",
-				"id":"wimbeldon_3",
+				"station":"Wimbledon",
+				"id":"wimbledon_3",
 				"name":"Buddhapadipa Temple",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Buddhapadipa_Temple.png",
+				"map_link":"https://goo.gl/maps/sM4z2KCn9dYzKtFb8",
+				"description":"The Buddhapadipa Temple is the first Thai Theravada Buddhist Temple ever built outside Asia. It is the centre of meditation, Buddhist education and Thai culture.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -351,9 +352,9 @@ var data = {"poi":[
 				"station":"Woking",
 				"id":"woking_1",
 				"name":"The Lightbox",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"The_Lightbox.png",
+				"map_link":"https://g.page/thelightboxwoking?share",
+				"description":"The Lightbox is an award-winning charitable arts and heritage organisation with a social purpose to improve the wellbeing and quality of life of its community.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -370,9 +371,9 @@ var data = {"poi":[
 				"station":"Woking",
 				"id":"woking_2",
 				"name":"RHS Garden",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"RHS_Garden.png",
+				"map_link":"https://goo.gl/maps/dML37NxustytFqc37",
+				"description":"RHS Garden Wisley is a garden run by the Royal Horticultural Society in the English county of Surrey, south of London. It is one of five gardens run by the society, the others being Harlow Carr, Hyde Hall, Rosemoor, and Bridgewater (which opened on 18 May 2021).Wisley is the second most visited paid entry garden in the United Kingdom after the Royal Botanic Gardens.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -388,9 +389,9 @@ var data = {"poi":[
 				"station":"Woking",
 				"id":"woking_3",
 				"name":"Mercedes Benz World",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Mercedes_Benz_World.png",
+				"map_link":"https://goo.gl/maps/FPCiFx6n6WLaThscA",
+				"description":"Next to the Brooklands Museum is Mercedes-Benz World, where the luxury car brand owns a series of training tracks and runs the AMG Driving Academy. Some champion drivers have used these courses, like Lewis Hamilton, Mika Häkkinen, Nico Rosberg and Stirling Moss.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -408,9 +409,9 @@ var data = {"poi":[
 				"station":"Guildford",
 				"id":"guildford_1",
 				"name":"Guildford Castle",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Guildford_Castle.png",
+				"map_link":"https://goo.gl/maps/aVJMZxEi36Z4wRAdA",
+				"description":"After the Battle of Hastings in 1066 William led his army to Canterbury and then sacked towns along the Pilgrims' Way, including Guildford. Later William, or one of his barons, built Guildford Castle. There is no record of it in the Domesday Book so construction probably started after 1086.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -427,9 +428,9 @@ var data = {"poi":[
 				"station":"Guildford",
 				"id":"guildford_2",
 				"name":"Guildford Museum",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Guildford_Museum.png",
+				"map_link":"https://goo.gl/maps/g7vfsx3BRmiGcMQS6",
+				"description":"Guildford Museum is the main museum is in the town of Guildford, Surrey, England. The museum is on Quarry Street, a narrow road lined by pre-1900 cottages running just off the pedestrianised High Street. This main site of the museum forms the gatehouse and annex of Guildford Castle, which the staff help to run.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -445,9 +446,9 @@ var data = {"poi":[
 				"station":"Guildford",
 				"id":"guildford_3",
 				"name":"Stoke Park",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Stoke_Park.png",
+				"map_link":"https://goo.gl/maps/Nh4rMNThAqt6AKaF6",
+				"description":"Stoke Park is a private sporting and leisure estate in Stoke Poges, Buckinghamshire. The mansion building (designed by James Wyatt in 1788) is located in the middle of 300 acres (1.2 km2) of parkland, lakes, gardens and monuments. In 1908, it became the first country club in the UK.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -465,9 +466,9 @@ var data = {"poi":[
 				"station":"Portsmouth",
 				"id":"portsmouth_1",
 				"name":"Spinnaker Tower",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Spinnaker_Tower.png",
+				"map_link":"https://goo.gl/maps/2WmCBQir7UTWn4RHA",
+				"description":"The Spinnaker Tower is a 170 metres landmark observation tower in Portsmouth, England. It is the centrepiece of the redevelopment of Portsmouth Harbour, which was supported by a National Lottery grant.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -484,9 +485,9 @@ var data = {"poi":[
 				"station":"Portsmouth",
 				"id":"portsmouth_2",
 				"name":"South Parade Pier",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"South_Parade_Pier.png",
+				"map_link":"https://goo.gl/maps/UjRjnTbddJHMCkud8",
+				"description":"The South Parade Pier is a pier in Portsmouth, England. It is one of two piers in the city, the other being Clarence Pier. The pier once had a long hall down its centre which housed a seating area and a small restaurant. The outside of the hall is a promenade which runs the length of the pier.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
@@ -502,9 +503,9 @@ var data = {"poi":[
 				"station":"Portsmouth",
 				"id":"portsmouth_3",
 				"name":"Historic Dockyard",
-				"image":"",
-				"map_link":"",
-				"description":"",
+				"image":"Historic_Dockyard.png",
+				"map_link":"https://g.page/historicdockyard?share",
+				"description":"Portsmouth Historic Dockyard is an area of HM Naval Base Portsmouth which is open to the public; it contains several historic buildings and ships. It is managed by the National Museum of the Royal Navy as an umbrella organization representing many  charities such as: the Portsmouth Naval Base Property Trust, and the HMS Victory Preservation Company.",
 				"comments":{
 					"comment1":"",
 					"comment2":"",
