--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -157,12 +157,13 @@
 	
 		<label for="date">RETURN:</label>
 		<input type="date" name="date" id="returnDate" value=""><br>
-		<label for="returnTime">Time: </label>
-		<input type="time" data-clear-btn="true" name="returnTime" id="returnTime" value="">
+		<label for="returnTime">Time:  </label>
+		<input type="time" data-clear-btn="true" name="returnTime" id="returnTime" value=""><br><br>
+		<!-----------------TO FIX THE WEIRD SPACE AFTER ICON ADD FALSE INSTEAD -->
 
 		<!-----------------NEEDS ADD ADULT, CHILD, RAILCARD -->
 
-		<br>
+		
 		<label for="enterPoints">Enter Points:</label>
 		<input type="text" id="enterPoints" name="enterPoints" value=""><br>
  		
