Booking Clear Btns

--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -151,12 +151,12 @@
 		
 		<br><br>
 		<label for="date">OUTBOUND:</label>
-		<input type="date" name="date" id="outboundDate" value=""><br>
+		<input type="date" data-clear-btn="true" name="date" id="outboundDate" value=""><br>
 		<label for="outboundTime">Time: </label>
-		<input type="time" data-clear-btn="false" name="outboundTime" id="outboundTime" value=""><br><br>
+		<input type="time" data-clear-btn="true" name="outboundTime" id="outboundTime" value=""><br><br>
 	
 		<label for="date">RETURN:</label>
-		<input type="date" name="date" id="returnDate" value=""><br>
+		<input type="date" data-clear-btn="true" name="date" id="returnDate" value=""><br>
 		<label for="returnTime">Time:  </label>
 		<input type="time" data-clear-btn="true" name="returnTime" id="returnTime" value=""><br><br>
 		<!-----------------TO FIX THE WEIRD SPACE AFTER ICON ADD FALSE INSTEAD -->
