--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -104,7 +104,23 @@
 		</div>
 	</div>
 	
+
+	
 	<h1>FAVOURITES </h1>
+	<br>
+	<div>
+	<form action="/action_page.php">
+		
+		<label for="email">Enter your email:</label>
+		<input type="email" id="email" name="email">
+		<input type="submit" value="Submit">
+		<label for="email">Send List to Email</label>
+
+	</form>
+
+	</div>
+	
+
 	
 	<div data-role="navbar">
 		<ul>
