--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -247,7 +247,6 @@
 <!-------------------------------------------------------------------------------------------------------------------->
 
 <script>
-/* JSON data copied & embedded in HTML file*/
 
 /*-------------------------HOME PAGE---------------------*/
 /*-------------------------------------------------------*/
@@ -255,9 +254,6 @@
 
 /*-----------------------FAVOURITES----------------------*/
 /*-------------------------------------------------------*/
-
-
-
 
 
 /*---------------------BOOK TICKETS --------------------*/
@@ -287,9 +283,19 @@ function validateForm() {
 
 
 
-
-
-
+</script>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+<script>
+/* JSON data copied & embedded in HTML file*/
 var data = {"poi":[
 	
 	/*WATERLOO*/
@@ -583,3 +589,4 @@ var data = {"poi":[
 </script>
 </body>
 </html>
+>
