--- a/TreasureExpress/te_site.html
+++ b/TreasureExpress/te_site.html
@@ -6,7 +6,12 @@
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
+<style>
+	@media screen and (max-width: 768px){
+		.poiSection{display:none;}
+	}
+	
+</style>
 
 </head>
 
@@ -66,27 +71,30 @@
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
 		</div>
 	</div>
+	
 	<div role="main" class="stationmap_poi_ipad">
 		<div class="stationmap">
 		<h1>STATION MAP</h1>
 		<p>Here is going to be the list of stations</p>
+		<!--- ipad version= hide poiSection and display these BUTTONS to poi_iphone page--->
+		<div class="poiGenerateButtons">
+			<button></button>
 		</div>
-
+		</div>
+		
+		<!--- iphone version= hide poiSection and display these LINKS to poi_iphone page--->
+		<a href="#te_poi_iphone" data-role="button">Waterloo</a>
+		<a href="#te_poi_iphone" data-role="button">Wimbeldon</a>
+		<a href="#te_poi_iphone" data-role="button">Woking</a>
+		<a href="#te_poi_iphone" data-role="button">Guildford</a>
+		<a href="#te_poi_iphone" data-role="button">Portsmouth</a>
+		
 		<div class="poiSection">
-		<h1>POIs</h1>
+		<!---Same code for this section and poi_iphone page --->
+		<h1>Clicked Station Name</h1>
 		<p>Here is going to be the generated POIs - using JSON the name, img and desc etc. will be displayed</p>
 		</div>
 		
-	</div>
-	
-	<!---------------------------------------------- Station Map Page (iPHONE VERSION) ------------------------------------------->
-	
-	<div role="main" class="stationmap_poi_iphone">
-		<div class="stationmap">
-		<h1>STATION MAP</h1>
-		<p>Here is going to be the list of stations</p>
-		<a href="#te_poi_iphone" data-role="button">OPEN POI</a>
-		</div>
 	</div>
 	
 	<div data-role="navbar">
@@ -99,6 +107,7 @@
 	</div>
 
 </div>
+<!---------------------------------------------- Station Map Page (iPHONE VERSION) ------------------------------------------->
 <div data-role="page" id="te_poi_iphone">
 	<div data-role="header">
 		<div data-role="controlgroup" data-type="horizontal">
@@ -107,7 +116,7 @@
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
 		</div>
 	</div>
-		<h1>POIs</h1>
+		<h1>Clicked Station Name</h1>
 		<p>Here is going to be the generated POIs - using JSON the name, img and desc etc. will be displayed</p>
 	<div data-role="navbar">
 		<ul>
@@ -118,7 +127,6 @@
 		</ul>
 	</div>
 </div>
-
 	
 <!-------------------------------------------------------------------------------------------------------------------->	
 <!------------------------------------------------- Favourites Page -------------------------------------------------->
@@ -130,8 +138,6 @@
 			<a href="#te_animDiamond" class="ui-btn ui-corner-all">DIAMOND</a>
 		</div>
 	</div>
-	
-
 	
 	<h1>FAVOURITES </h1>
 	<br>
